// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  <div
    class="Ticket__Wrapper-sc-1svriai-1 bdoffB"
    data-testid="reservation__ticket--container"
  >
    <div
      class="Ticket__PunchHole-sc-1svriai-0 cPFeBc"
    />
    <div
      class="Ticket__Content-sc-1svriai-2"
    >
      <h1
        class="typography__H1-sc-1yt5fo8-4 Ticket__Title-sc-1svriai-3 iRakjT efOTNE"
        data-test="reservation__title"
      >
        Ticket title
      </h1>
      <div
        class="Ticket__Price-sc-1svriai-6 dpMzv"
        data-testid="reservation__price--container"
      >
        <div
          class="Ticket__PriceRow-sc-1svriai-7 jYjrMn"
        >
          <div>
            <span
              class="typography__Strongish-sc-1yt5fo8-1 glpVaJ"
            >
              reservations:reservationDuration
            </span>
          </div>
          <div />
        </div>
        <div
          class="Ticket__PriceRow-sc-1svriai-7 jYjrMn"
        >
          <div>
            <span
              class="typography__Strongish-sc-1yt5fo8-1 glpVaJ"
            >
              prices:total
            </span>
          </div>
          <div>
            <span
              class="typography__Strongish-sc-1yt5fo8-1 glpVaJ"
            >
              prices:priceFree
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Ticket__PunchHole-sc-1svriai-0 cPFeBc"
    />
  </div>
</DocumentFragment>
`;

exports[`renders correctly 2`] = `
<DocumentFragment>
  <div
    class="Ticket__Wrapper-sc-1svriai-1 iXIsru"
    data-testid="reservation__ticket--container"
  >
    <div
      class="Ticket__PunchHole-sc-1svriai-0 cPFeBc"
    />
    <div
      class="Ticket__Content-sc-1svriai-2"
    >
      <h1
        class="typography__H1-sc-1yt5fo8-4 Ticket__Title-sc-1svriai-3 iRakjT efOTNE"
        data-test="reservation__title"
      >
        Ticket title
      </h1>
      <div
        class="Ticket__Price-sc-1svriai-6 dpMzv"
        data-testid="reservation__price--container"
      >
        <div
          class="Ticket__PriceRow-sc-1svriai-7 jYjrMn"
        >
          <div>
            <span
              class="typography__Strongish-sc-1yt5fo8-1 glpVaJ"
            >
              reservations:reservationDuration
            </span>
          </div>
          <div />
        </div>
        <div
          class="Ticket__PriceRow-sc-1svriai-7 jYjrMn"
        >
          <div>
            <span
              class="typography__Strongish-sc-1yt5fo8-1 glpVaJ"
            >
              prices:total
            </span>
          </div>
          <div>
            <span
              class="typography__Strongish-sc-1yt5fo8-1 glpVaJ"
            >
              prices:priceFree
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Ticket__PunchHole-sc-1svriai-0 cPFeBc"
    />
  </div>
</DocumentFragment>
`;

exports[`renders correctly 3`] = `
<DocumentFragment>
  <div
    class="Ticket__Wrapper-sc-1svriai-1 iXIsru"
    data-testid="reservation__ticket--container"
  >
    <div
      class="Ticket__PunchHole-sc-1svriai-0 cPFeBc"
    />
    <div
      class="Ticket__Content-sc-1svriai-2"
    >
      <h1
        class="typography__H1-sc-1yt5fo8-4 Ticket__Title-sc-1svriai-3 iRakjT efOTNE"
        data-test="reservation__title"
      >
        Ticket title
      </h1>
      <div
        class="Ticket__Price-sc-1svriai-6 gCUcHm"
        data-testid="reservation__price--container"
      >
        <span
          class="typography__Strongish-sc-1yt5fo8-1 glpVaJ"
        >
          reservationUnit:priceFree
        </span>
      </div>
    </div>
    <div
      class="Ticket__PunchHole-sc-1svriai-0 cPFeBc"
    />
  </div>
</DocumentFragment>
`;

exports[`renders correctly 4`] = `
<DocumentFragment>
  <div
    class="Ticket__Wrapper-sc-1svriai-1 khqbSD"
    data-testid="reservation__ticket--container"
  >
    <div
      class="Ticket__PunchHole-sc-1svriai-0 eWgkOB"
    />
    <div
      class="Ticket__Content-sc-1svriai-2"
    >
      <h1
        class="typography__H1-sc-1yt5fo8-4 Ticket__Title-sc-1svriai-3 iRakjT efOTNE"
        data-test="reservation__title"
      >
        Backgstage huone
      </h1>
      <h2
        class="typography__H2-sc-1yt5fo8-5 Ticket__Subtitle-sc-1svriai-4 eWybbF fQtuCM"
      >
        Arabianrannan nuorisotalo
      </h2>
      <div
        class="Ticket__Duration-sc-1svriai-5 jSyvHM"
        data-test="reservation__time-range"
      >
        <svg
          class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h24v24H0z"
            />
            <path
              d="M17 2a1 1 0 011 1v1h4v17H2V4h4V3a1 1 0 112 0v1h8V3a1 1 0 011-1zm3 9H4v8h16v-8zm0-5H4v3h16V6z"
              fill="currentColor"
            />
          </g>
        </svg>
        <span>
          Common:dateWithWeekday common:timeWithPrefix - common:time 
          <span
            class="util__NoWrap-sc-167ctya-2 bwknGR"
          >
            (common:duration)
          </span>
        </span>
      </div>
      <div
        class="Ticket__Price-sc-1svriai-6 gCUcHm"
        data-testid="reservation__price--container"
      >
        <span
          class="typography__Strongish-sc-1yt5fo8-1 glpVaJ"
        >
          reservationUnit:priceFree
        </span>
      </div>
    </div>
    <div
      class="Ticket__PunchHole-sc-1svriai-0 eWgkOB"
    />
  </div>
</DocumentFragment>
`;
